# ini-serialization-deserialization-example

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
asset/: example.ini
cmake/: FetchBoost.cmake  FetchCatch2.cmake  FetchTrompeloeil.cmake
src/: conversion.h  convertion.h  example.h  file.cpp  file.h  filefactory.h  ini.cpp  ini.h  main.cpp  stdfile.cpp  stdfile.h  stdfilefactory.cpp  stdfilefactory.h  string.h  transformini.cpp  transformini.h  transformini.hpp
test/: CMakeLists.txt  ini.cpp
test/integration/: CMakeLists.txt  filefactorymock.hpp  transform.cpp
test/shared/: fakefile.cpp  fakefile.h
test/unit/: CMakeLists.txt  fakefile.cpp  fakefile.h  ini.cpp
